# cooperation

./: .env  .env.example  .gitignore  dump.rdb  frontlink  package-lock.json  package.json  requirements.txt  start.md
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: backend_pre_start.py  crud.py  decay.py  initial_data.py  main.py  models.py  tests_pre_start.py
backend/app/ML/: feature.py  features.py  predictor.py  trainer.py
backend/app/ai/: prompts.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: items.py  login.py  (+3 more)
backend/app/core/: config.py  db.py  security.py
backend/app/data/: age_group_preference_processed.csv  식습관+유형_20260528223024.xlsx
backend/app/routers/: auth.py  feedback.py  fridge.py  ocr.py  recipe.py  recommend.py
backend/app/schemas/: auth.py  fridge.py  recipe.py  user.py
backend/app/scripts/: check_age_preference.py  import_age_preference.py  replace_http.py  update_embeddings.py
backend/app/services/: clova_ocr_service.py  embedding_service.py  fridge_service.py  ingredient_ai_service.py  llm_service.py  openai_service.py  recipe_service.py  recommend_service.py  user_service.py  vector_service.py
backend/app/utils/: auth.py  decay.py  deps.py  jwt.py  mail.py  parser.py  recipe_parser.py  security.py
backend/db/: mongo.py
backend/scripts/: lint.sh  prestart.sh  test.sh
backend/tests/: conftest.py
backend/tests/crud/: test_user.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/utils/: item.py  user.py  utils.py
(+59 files in other folders)
